<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/component_edittext_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:inputType="textMultiLine"
        android:maxLines="4"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="8dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:singleLine="false"
        android:textSize="16sp" />

</LinearLayout>