...
            android:layout_height="48dp"
            android:background="?android:selectableItemBackground"
            android:padding="15dp"
            android:src="@drawable/ic_action_back" />

        <TextView
            android:id="@+id/tvHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="Alex"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />
...
